solved the user name issue and chat alignment of users

--- a/src/components/Msgdisplay/Msgdisplay.css
+++ b/src/components/Msgdisplay/Msgdisplay.css
@@ -1,24 +1,45 @@
 .message-display-wrapper{
+  height:100vh;
+  overflow: auto;
+}
+.message-display-inner-wrapper{
   background: url(../../images/bg.webp);
   background-attachment: fixed;
   background-size: 700px auto;
   min-height:100vh;
-  padding:20px;
+  padding:20px 20px 100px 20px;
   display: flex;
   flex-direction: column;
   gap:30px;
 }
+.single-message-wrapper{
+  width:100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
 .message{
-  position: relative;
   background:rgba(255,255,255,1);
   max-width:fit-content;
   min-width: min-content;
   padding:20px;
   border-radius: 20px;
   font-size: 2rem;
-  /* color:#3e97c9; */
   font-weight: 500;
-  
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  grid-column: 1;
+
+
+}
+.message-user-specific{
+  grid-column: -1;
+  text-align: right;
+
+}
+.username-name{
+  font-weight: 100;
+  font-size: 1rem;
 }
 .message::before{
   content: "";
